--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "normalize-scss/sass/normalize/import-now";
+
 .unsupported-browser {
     display: none;
 }
@@ -29,4 +31,8 @@ div.app-spinner:before {
     border-top-color: #07d;
     border-bottom-color: #07d;
     animation: app-spinner .8s ease infinite;
+}
+
+body { 
+    font-size: $base-font-size
 }
